--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div class="text">using bundle</div>
+    <div class="text">using bundle..</div>
 
     <script src="dist/manifest.js"></script>
     <script src="dist/vendor.js"></script>
